# pararius

./: .gitignore  README.md  pyproject.toml
pararius/: __init__.py  _core.py
tests/: test_core.py
